--- a/app/styles/_buttonSwitch.scss
+++ b/app/styles/_buttonSwitch.scss
@@ -13,7 +13,7 @@ button-switch {
     display: inline-block;
 
     .buttonSwitch {
-        min-height: 27.5px;
+        min-height: 28px;
         min-width: 30px;
         width: auto;
         vertical-align: middle;
